apps/hello-gitops/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-gitops
  namespace: default
  labels:
    app: hello-gitops
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-gitops
  template:
    metadata:
      labels:
        app: hello-gitops
    spec:
      imagePullSecrets:
      - name: ghcr-secret
      containers:
      - name: hello-gitops
        image: ghcr.io/johanson1988/hello-gitops-app:main
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 100m
            memory: 128Mi
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
